Fix z-index bug in AudioOptions menu

--- a/src/components/HamburgerDropdown/HamburgerDropdown.scss
+++ b/src/components/HamburgerDropdown/HamburgerDropdown.scss
@@ -11,6 +11,7 @@
   }
   .children {
     right: 0;
+    z-index: 40;
     position: absolute;
   }
 }
